# terms

./: .Rbuildignore  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  index.Rmd  index.md  publications.bib  release.R
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
R/: clusters.R  store.R  terms.R  timing.R  tmat.R  utils.R  visualise.R
docs/: 404.html  LICENSE-text.html  authors.html  index.html  pkgdown.yml  sitemap.xml
docs/articles/: Indexing.html  Keywords.html  Output.html  Subroutines.html  Theory.html  Todo.html  index.html
docs/news/: index.html
docs/reference/: clusters.html  index.html  sample_fibonacci.html  store.html  utility.html  utils.html  x3d_scene.html
inst/: _x3d_header.html
man/: clusters.Rd  sample_fibonacci.Rd  store.Rd  utility.Rd  utils.Rd  x3d_scene.Rd
pkgdown/: _pkgdown.yml  extra.css
pkgdown/templates/: in-header.html
src/: HDFfive.f90  Makefile  eps.f90  io_help.f90  linalg.f90  miet.f90  multiscat.f90  sphmsv.f90  swav.f90  termsProgram.f90  toms644.f  write_compound.f90
src/HDF5Libs/: H5Iff.F90  H5Pff.F90  H5Rff.F90
src/extLibs/: ReadMe  pchip.f90
test/: input1  input2  input3  wavelengths
test/epsilon/: compare_Ag.R  compare_Au.R  epsilon_Ag.txt  epsilon_Au.txt  epsilon_Cu.txt  input1  input2  input3  input_Au1  input_Au2  log1  log2  log_Au1  log_Au2  ph5004237_si_002.txt  write.R
test/incidence/: incidence_leb_14  incidence_leb_26  incidence_leb_38  incidence_leb_50  incidence_leb_6  write.R
test/tmatrix/: long.arrow  read.py  read_save.R  tmat_Au20x50_Nmax4.txt
vignettes/: ADVICE.md  FAQ.md  Indexing.Rmd  Keywords.Rmd  Keywords.tex  Subroutines.Rmd  Subroutines.html  Theory.Rmd  Todo.Rmd  _macros.tex
vignettes/00_logo/: 00_logo.Rmd  README.md  input  map.R  positions
vignettes/00_mantis/: 00_mantis.Rmd  00_mantis.html
vignettes/00_singlesphere/: 00_singlesphere.Rmd  00_singlesphere_sphere.Rmd  _run.R  input  log
vignettes/01_dimer_spheres/: 01_dimer_spheres.Rmd  _run.R  log  (+3 more)
(+916 files in other folders)
